--- a/Python/Python_data_science/Pandas03; indexing, slicing.ipynb
+++ b/Python/Python_data_science/Pandas03; indexing, slicing.ipynb
@@ -278,7 +278,12 @@
     "- index와 column을 갖는 2차원 배열이다\n",
     "- column을 key값으로 갖는 딕셔너리 처럼 동작한다\n",
     "- indexing, slicing, masking, fancy indexing 다 가능하다\n",
-    "- 다만 2차원 배열이기 때문에 추가적인 부분 존재"
+    "- 데이터 프레임만의 인덱싱 규칙\n",
+    "    - 1. df[0] 암무적 정수 인덱스 불가\n",
+    "    - 2. df['col01'] 명시적 인덱스는 열단위 인덱싱\n",
+    "    - 3. df[0:3] 슬라이싱은 행단위 인덱싱\n",
+    "    - 4. df[boolean mask] boolean 인덱싱은 행단위 인덱싱이다\n",
+    "    - 5. df[,] 2차원 인덱싱 없다 => iloc 혹은 loc을 사용하자"
    ]
   },
   {
@@ -291,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "99d7321f",
    "metadata": {},
    "outputs": [
@@ -363,31 +368,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 암묵적 정수 인덱스 사용 불가\n",
     "# key error\n",
     "df01[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "28339a8c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "오전    1\n",
-       "오후    5\n",
-       "Name: 서울, dtype: int64"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오전    1\n",
+      "오후    5\n",
+      "Name: 서울, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "df01['서울']"
+    "# 명시적 인덱스는 열단위 인덱싱이다\n",
+    "print(df01['서울'])"
    ]
   },
   {
@@ -475,11 +479,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ce69c749",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>경기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  경기\n",
+       "오전   1   3\n",
+       "오후   5   7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 명시적 인덱싱 + fancy indexing\n",
+    "display(df01[['서울','경기']])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "45ecbf36",
    "metadata": {},
    "source": [
     "#### 2.slicing => slicing은 row를 기준으로 진행된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "04dd2345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [서울, 부산, 경기, 대전]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 슬라이싱은 row를 기준으로 인식 => 아무 행도 해당하지 않음\n",
+    "df01['서울':'경기']"
    ]
   },
   {
@@ -546,7 +665,7 @@
    "id": "d5e0bdab",
    "metadata": {},
    "source": [
-    "- 2차원 배열 => numpy에서 사용했던 2차원 배열 문법은 없다고 생각하자\n",
+    "#### 3. 2차원 인덱스는 없다 => numpy에서 사용했던 2차원 배열 문법은 없다고 생각하자\n",
     "- indexer (iloc,loc,ix)를 사용하면 가능하다"
    ]
   },
@@ -568,8 +687,123 @@
    "id": "af711e0d",
    "metadata": {},
    "source": [
-    "#### 3.indexer \n",
-    "- 당연히 masking과 facny indexing 도 가능하다"
+    "#### 4.indexer \n",
+    "    - loc  : 라벨 기반의 2차원 인덱싱 슬라이싱\n",
+    "    - iloc : 기본 정수 인덱스 기반의 2차원 인덱싱 슬라이싱\n",
+    "- loc iloc는 기본적으로 row indexing이다\n",
+    "- loc iloc는 2차원 인덱싱도 가능하다 => 이때 return 타입에 유념"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "56d854cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "서울    1\n",
+       "부산    2\n",
+       "경기    3\n",
+       "대전    4\n",
+       "Name: 오전, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "서울    1\n",
+       "부산    2\n",
+       "경기    3\n",
+       "대전    4\n",
+       "Name: 오전, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# loc iloc은 기본적으로 row indexing이다\n",
+    "display(df01.loc['오전'])\n",
+    "display(df01.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "982eab15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "서울    5\n",
+       "부산    6\n",
+       "경기    7\n",
+       "대전    8\n",
+       "Name: 오후, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 마지막행 출력 \n",
+    "display(df01.iloc[-1])\n",
+    "display(df01.iloc[[-1]])"
    ]
   },
   {
@@ -820,10 +1054,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "id": "e76ffc1d",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오전    False\n",
+      "오후     True\n",
+      "Name: 서울, dtype: bool\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -868,14 +1166,264 @@
        "오후   5   6   7   8"
       ]
      },
-     "execution_count": 92,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "# loc iloc을 사용하지 않았다\n",
     "# masking\n",
-    "df01.loc[df01['서울']>1,:]"
+    "display(df01)\n",
+    "print(df01['서울']>1)\n",
+    "\n",
+    "# boolean indexing은 자동으로 row단위로 인식한다\n",
+    "display(df01[df01['서울']>1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6670d3b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오전    False\n",
+      "오후     True\n",
+      "Name: 서울, dtype: bool\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# loc iloc을 사용\n",
+    "display(df01)\n",
+    "print(df01['서울']>1)\n",
+    "display(df01.loc[df01['서울']>1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ba5446d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>경기</th>\n",
+       "      <th>대전</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오전</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  부산  경기  대전\n",
+       "오전   1   2   3   4\n",
+       "오후   5   6   7   8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오전    False\n",
+      "오후     True\n",
+      "Name: 서울, dtype: bool\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>경기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>오후</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    서울  경기\n",
+       "오후   5   7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# loc iloc을 사용\n",
+    "display(df01)\n",
+    "print(df01['서울']>1)\n",
+    "display(df01.loc[df01['서울']>1,['서울','경기']])"
    ]
   }
  ],
