--- a/Python/Python_data_science/pandas08; merge join concat.ipynb
+++ b/Python/Python_data_science/pandas08; merge join concat.ipynb
@@ -1,12 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6d06a690",
+   "metadata": {},
+   "source": [
+    "## pandas08; merge join concat"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "585510e3",
+   "execution_count": 1,
+   "id": "bce87b75",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c71c6455",
+   "metadata": {},
+   "source": [
+    "### Merge"
+   ]
   }
  ],
  "metadata": {
