--- a/Python/Python_data_science/Pandas06 ; NA.ipynb
+++ b/Python/Python_data_science/Pandas06 ; NA.ipynb
@@ -138,6 +138,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7502a777",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 계산도 무시하고 알아서잘 해줌\n",
+    "pd.Series([1,None,2,np.nan,3]).mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "13ae0963",
    "metadata": {},
@@ -193,14 +215,6 @@
    "source": [
     "pd.Series(['1','2',np.nan])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c28836b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
