--- a/Python/Python_data_science/Pandas05; index, sort.ipynb
+++ b/Python/Python_data_science/Pandas05; index, sort.ipynb
@@ -133,7 +133,7 @@
     "    - index 와 columns에 모두 적용 가능하다\n",
     "    - 완전히 새로운 인덱스를 덮어쓰는게 아니다 => fancy indexing 처럼 동작한다\n",
     "    - 원래 값이 따라간다\n",
-    " "
+    "- rename()"
    ]
   },
   {
