--- a/Python/Python_data_science/pd_06.ipynb
+++ b/Python/Python_data_science/pd_06.ipynb
@@ -2318,7 +2318,7 @@
     "plt.xlabel('pcalss')\n",
     "plt.xticks(x)\n",
     "plt.show()\n",
-    "plt.close()"
+    "plt.close()\n"
    ]
   },
   {
