--- a/Python/Python_data_science/pd_05.ipynb
+++ b/Python/Python_data_science/pd_05.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "a92596a6",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "id": "bd2b4827",
    "metadata": {},
    "outputs": [
@@ -954,14 +954,17 @@
        "male    122  108  347"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# ''로 함수가 들어가는 것들은  'DataFrameGroupBy' object의 원래 함수들이다\n",
+    "# 여기서 'size'는 groupby의 size다\n",
+    "\n",
     "titanic_df.pivot_table(index='sex',columns='pclass',aggfunc='size')\n",
+    "\n",
     "\n",
     "# np.size가 들어가면 안된다\n",
     "#titanic_df.pivot_table(index=['sex','pclass'],aggfunc=np.size)\n",
