--- a/Python/Python_data_science/pandas10; aggregate functions, groupby (apply, transform, filter, agg).ipynb
+++ b/Python/Python_data_science/pandas10; aggregate functions, groupby (apply, transform, filter, agg).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "906d8126",
    "metadata": {},
    "outputs": [],
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "6db72735",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1507,7 @@
        "4  데이터분석   2  신사임당  4.3"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,17 +1532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "acb39632",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7fd0fb264e80>"
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7fe821595df0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "02c73fd8",
    "metadata": {},
    "outputs": [
@@ -1564,7 +1564,7 @@
        "{'데이터분석': [1, 3, 4], '인공지능': [0, 2]}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "be0bc032",
    "metadata": {},
    "outputs": [
@@ -1587,7 +1587,7 @@
        "Name: 학과, dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "3ddb359e",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
        "Name: 학과, dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "4ace9980",
    "metadata": {},
    "outputs": [
@@ -1632,7 +1632,7 @@
        "{'AI': [0, 2], 'BA': [1, 3, 4]}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "5b1f2ef1",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
        "Name: 학과, dtype: object"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "9d9adcb4",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1695,7 @@
        "Name: 학과, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "0ef9db89",
    "metadata": {},
    "outputs": [
@@ -1719,7 +1719,7 @@
        "Name: 학과, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,17 +1738,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "252afc3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd0dbaf2310>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fe8215fac10>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "2562bd78",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1770,7 @@
        "{'데이터분석': [1, 3, 4], '인공지능': [0, 2]}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "fb1860ac",
    "metadata": {},
    "outputs": [
@@ -1845,7 +1845,7 @@
        "4  데이터분석   2  신사임당  4.3"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "id": "7de72b34",
    "metadata": {},
    "outputs": [
@@ -1869,9 +1869,11 @@
       "1  데이터분석   2   최강희  3.5\n",
       "3  데이터분석   4   홍길동  3.8\n",
       "4  데이터분석   2  신사임당  4.3\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "     학과  학년   이름   학점\n",
       "0  인공지능   1  섭섭해  2.7\n",
-      "2  인공지능   3  김희선  4.5\n"
+      "2  인공지능   3  김희선  4.5\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
      ]
     },
     {
@@ -1908,19 +1910,19 @@
        "Index: []"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 순환\n",
-    "groupby_df.apply(lambda x: print(x))"
+    "groupby_df.apply(lambda x: print(x,type(x),sep='\\n'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "id": "8cf1c8d1",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1986,7 @@
        "인공지능   2.000000  3.600000"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "id": "87ecf82a",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2053,7 @@
        "인공지능   2.000000  3.600000"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "abd09298",
    "metadata": {},
    "outputs": [
@@ -2075,7 +2077,7 @@
        "Name: 학년, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2087,17 +2089,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "b6ccada7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7fd0fab176d0>"
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7fe8215fafd0>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,17 +2111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "id": "cc1e975c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd0fad084f0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fe8215fa6a0>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "id": "f29bc7ab",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2146,7 @@
        "Name: 학점, dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "id": "2d3050b2",
    "metadata": {},
    "outputs": [
@@ -2208,7 +2210,7 @@
        "인공지능   3.600000"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,6 +2218,90 @@
    "source": [
     "# # 좀더 구체적으로 학과에 따른 학점의 평균만을 구해보자 반환을 dataframe으로\n",
     "groupby_df[['학점']].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4d5d595",
+   "metadata": {},
+   "source": [
+    "#### groupby 와 size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e3f5201a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "학과\n",
+       "데이터분석    12\n",
+       "인공지능      8\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dataframe의 전체 크기 열*행\n",
+    "groupby_df.apply(np.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "86ebc2b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "학과\n",
+       "데이터분석    12\n",
+       "인공지능      8\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dataframe의 전체 크기 열*행\n",
+    "groupby_df.apply(lambda x: x.size) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a8883739",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "학과\n",
+       "데이터분석    3\n",
+       "인공지능     2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 집계 함수의 개념이 아닌 groupby 한 속성이라고 생각하자\n",
+    "# Number of rows in each group as a Series\n",
+    "groupby_df.size()"
    ]
   },
   {
